# gramtool

./: Dockerfile  README.rst  docker-compose.yml  pyproject.toml
gramtool/utils/: grammar.py
